--- a/demo3.html
+++ b/demo3.html
@@ -34,7 +34,7 @@
 
 <div class="input-section">
   <input type="text" id="nameInput" placeholder="輸入人名">
-  <button id="addBtn">添加</button>
+  <button id="addBtn">新增</button>
   <button id="downloadPdfBtn">下載 PDF</button>
 </div>
 
