--- a/iridescence.html
+++ b/iridescence.html
@@ -2,13 +2,14 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>彩虹背景測試</title>
+<title>彩虹背景</title>
 <style>
-  html, body { margin:0; padding:0; height:100%; overflow:hidden; background:black; }
+  html, body { margin:0; padding:0; height:100%; overflow:hidden; }
   #bg { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; }
 </style>
 </head>
 <body>
+  <h1>ver2</h1>
 <div id="bg"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
@@ -19,27 +20,22 @@
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.getElementById('bg').appendChild(renderer.domElement);
 
-  // 建立彩虹球體（簡單可見效果）
-  const geometry = new THREE.SphereGeometry(2, 64, 64);
-  const material = new THREE.MeshBasicMaterial({ 
-    color: 0xff00ff, // 初始顏色
-    wireframe: false
-  });
-  const sphere = new THREE.Mesh(geometry, material);
-  scene.add(sphere);
+  // 建立全屏平面
+  const geometry = new THREE.PlaneGeometry(10, 10, 1, 1);
+  const material = new THREE.MeshBasicMaterial({ color: 0xff0000 }); // 初始紅色
+  const plane = new THREE.Mesh(geometry, material);
+  scene.add(plane);
 
   camera.position.z = 5;
 
   let time = 0;
   function animate() {
     requestAnimationFrame(animate);
-    time += 0.01;
-
-    // 簡單彩虹色變化
+    time += 0.02;
+    // 彩虹循環
     material.color.r = (Math.sin(time)+1)/2;
     material.color.g = (Math.sin(time + 2)+1)/2;
     material.color.b = (Math.sin(time + 4)+1)/2;
-
     renderer.render(scene, camera);
   }
   animate();
