--- a/iridescence.html
+++ b/iridescence.html
@@ -9,9 +9,8 @@
 </style>
 </head>
 <body>
-  <h1>ver2</h1>
 <div id="bg"></div>
-
+<font color="blue">VersionXXX</font>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
 <script>
   const scene = new THREE.Scene();
@@ -48,3 +47,4 @@
 </script>
 </body>
 </html>
+
